# movie-social-media

./: .env.example  .gitignore  cinesocial.db  package.json  pnpm-lock.yaml  turbo.json
.claude/: launch.json
apps/mobile/: app.json  package.json
apps/mobile/src/screens/: FeedScreen.tsx
apps/web/: next.config.ts  package.json  tailwind.config.ts
apps/web/src/app/: layout.tsx  page.tsx
docs/: ARCHITECTURE.md  DATABASE.md  DUO_MATCH_DESIGN.md  SPOILER_DETECTION.md
infra/: docker-compose.yml
services/api/: pyproject.toml
services/api/app/: config.py  dependencies.py  main.py
services/api/app/api/v1/: router.py
services/api/app/api/v1/endpoints/: auth.py  chat.py  duo_match.py  feed.py  movies.py  ratings.py  reviews.py  users.py  watched_with.py
services/api/app/api/v1/schemas/: auth.py  duo_match.py  rating.py  review.py  spoiler.py
services/api/app/core/: events.py  exceptions.py  security.py
services/api/app/db/: session.py
services/api/app/graph/: driver.py  queries.py  social_graph.py
services/api/app/models/: __init__.py  chat.py  duo_match.py  movie.py  rating.py  review.py  user.py  watched_with.py
services/api/app/services/: spoiler_service.py
services/api/app/vector/: client.py  collections.py  embeddings.py
services/api/tests/: conftest.py  test_auth.py  test_spoiler.py
services/ml/: pyproject.toml
services/ml/src/inference/: rag_pipeline.py  recommendation_pipeline.py  spoiler_pipeline.py
services/ml/src/models/: embedding_model.py  recommendation.py  spoiler_classifier.py
services/ml/src/training/: train_spoiler.py
(+17 files in other folders)
