[project]
name = "cinesocial-ml"
version = "0.1.0"
description = "CineSocial ML Models — Spoiler Detection, Recommendations, RAG"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5.0",
    "transformers>=4.46.0",
    "sentence-transformers>=3.3.0",
    "datasets>=3.1.0",
    "scikit-learn>=1.5.0",
    "numpy>=2.1.0",
    "pandas>=2.2.0",
    "qdrant-client>=1.12.0",
    "accelerate>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "jupyter>=1.1.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
